--- a/appview/pages/templates/layouts/topbar.html
+++ b/appview/pages/templates/layouts/topbar.html
@@ -45,6 +45,7 @@
     >
         <a href="/{{ didOrHandle .Did .Handle }}">profile</a>
         <a href="/knots">knots</a>
+        <a href="/spindles">spindles</a>
         <a href="/settings">settings</a>
         <a href="#" 
            hx-post="/logout" 
