--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -222,6 +222,7 @@
         </div>
       </div>
 
+      <!-- commit info bar -->
       <div class="text-xs mt-2 text-gray-500 dark:text-gray-400 flex items-center">
           {{ $verified := $.VerifiedCommits.IsVerified .Hash.String }}
           {{ $hashStyle := "text-gray-700 dark:text-gray-300 bg-gray-100 dark:bg-gray-900" }}
@@ -238,7 +239,7 @@
               </a>
           </span>
         <span
-          class="mx-2 before:content-['·'] before:select-none"
+          class="mx-1 before:content-['·'] before:select-none"
           ></span>
         <span>
           {{ $didOrHandle := index $.EmailToDidOrHandle .Author.Email }}
@@ -256,23 +257,26 @@
             {{ end }}</a
           >
         </span>
-            <div
-              class="inline-block px-1 select-none after:content-['·']"
-              ></div>
-            <span>{{ timeFmt .Committer.When }}</span>
-            {{ $tagsForCommit := index $.TagMap .Hash.String }}
-            {{ if gt (len $tagsForCommit) 0 }}
-            <div
-              class="inline-block px-1 select-none after:content-['·']"
-              ></div>
-            {{ end }}
-            {{ range $tagsForCommit }}
-            <span
-              class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-1/2 inline-flex items-center"
-              >
-              {{ . }}
-            </span>
-              {{ end }}
+        <div class="inline-block px-1 select-none after:content-['·']"></div>
+        <span>{{ timeFmt .Committer.When }}</span>
+
+        <!-- tags/branches -->
+        {{ $tagsForCommit := index $.TagMap .Hash.String }}
+        {{ if gt (len $tagsForCommit) 0 }}
+          <div class="inline-block px-1 select-none after:content-['·']"></div>
+        {{ end }}
+        {{ range $tagsForCommit }}
+          <span class="text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 mx-[2px] inline-flex items-center">
+            {{ . }}
+          </span>
+        {{ end }}
+
+        <!-- ci status -->
+        {{ $pipeline := index $.Pipelines .Hash }}
+        {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
+          <div class="inline-block px-1 select-none after:content-['·']"></div>
+          {{ template "repo/fragments/pipelineStatusSymbol" $pipeline }}
+        {{ end }}
       </div>
     </div>
     {{ end }}
