appview: show CI status on log and commit pages
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -68,6 +68,12 @@
           </div>
       </div>
       {{ end }}
+
+      <div class="text-sm">
+        {{ if $.Pipeline }}
+          {{ template "repo/fragments/pipelineStatusSymbol" $.Pipeline }}
+        {{ end }}
+      </div>
   </div>
 
 </section>
