--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -272,7 +272,7 @@
         {{ end }}
 
         <!-- ci status -->
-        {{ $pipeline := index $.Pipelines .Hash }}
+        {{ $pipeline := index $.Pipelines .Hash.String }}
         {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
           <div class="inline-block px-1 select-none after:content-['·']"></div>
           {{ template "repo/fragments/pipelineStatusSymbol" $pipeline }}
