--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -20,6 +20,7 @@
                 <th class="py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Author</th>
                 <th class="py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Commit</th>
                 <th class="py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Message</th>
+                <th class="py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold"></th>
                 <th class="py-2 text-sm text-left text-gray-700 dark:text-gray-300 uppercase font-bold">Date</th>
             </tr>
         </thead>
@@ -57,29 +58,34 @@
                                 {{ i "folder-code" "w-4 h-4" }}
                             </a>
                         </div>
+
                     </td>
                     <td class=" py-3 align-top">
-                      <div>
-                          <div class="flex items-center justify-start">
-                              <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="dark:text-white no-underline hover:underline">{{ index $messageParts 0 }}</a>
-                              {{ if gt (len $messageParts) 1 }}
-                              <button class="ml-2 py-1/2 px-1 bg-gray-200 hover:bg-gray-400 dark:bg-gray-700 dark:hover:bg-gray-600 rounded" hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')">{{ i "ellipsis" "w-3 h-3" }}</button>
-                              {{ end }}
-
-
-                              {{ if index $.TagMap $commit.Hash.String }}
-                                {{ range $tag := index $.TagMap $commit.Hash.String }}
-                                  <span class="ml-2 text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 inline-flex items-center">
-                                    {{ $tag }}
-                                  </span>
-                                {{ end }}
-                              {{ end }}
-
-                          </div>
-
+                      <div class="flex items-center justify-start gap-2">
+                          <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}" class="dark:text-white no-underline hover:underline">{{ index $messageParts 0 }}</a>
                           {{ if gt (len $messageParts) 1 }}
-                          <p class="hidden mt-1 text-sm text-gray-600 dark:text-gray-400">{{ nl2br (index $messageParts 1) }}</p>
+                          <button class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 dark:bg-gray-700 dark:hover:bg-gray-600 rounded" hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')">{{ i "ellipsis" "w-3 h-3" }}</button>
                           {{ end }}
+
+                          {{ if index $.TagMap $commit.Hash.String }}
+                            {{ range $tag := index $.TagMap $commit.Hash.String }}
+                              <span class="ml-2 text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 inline-flex items-center">
+                                {{ $tag }}
+                              </span>
+                            {{ end }}
+                          {{ end }}
+                      </div>
+
+                      {{ if gt (len $messageParts) 1 }}
+                        <p class="hidden mt-1 text-sm text-gray-600 dark:text-gray-400">{{ nl2br (index $messageParts 1) }}</p>
+                      {{ end }}
+                    </td>
+                    <td class="py-3 align-top">
+                        <!-- ci status -->
+                        {{ $pipeline := index $.Pipelines .Hash.String }}
+                        {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
+                          {{ template "repo/fragments/pipelineStatusSymbol" $pipeline }}
+                        {{ end }}
                     </td>
                     <td class=" py-3 align-top text-gray-500 dark:text-gray-400">{{ timeFmt $commit.Committer.When }}</td>
                 </tr>
@@ -94,43 +100,41 @@
                 <div id="commit-message">
                     {{ $messageParts := splitN $commit.Message "\n\n" 2 }}
                     <div class="text-base cursor-pointer">
-                        <div>
-                            <div class="flex items-center justify-between">
-                                <div class="flex-1">
-                                    <div class="inline">
-                                        <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}"
-                                           class="inline no-underline hover:underline dark:text-white">
-                                           {{ index $messageParts 0 }}
-                                        </a>
-                                        {{ if gt (len $messageParts) 1 }}
-                                            <button
-                                                class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 rounded dark:bg-gray-700 dark:hover:bg-gray-600 ml-2"
-                                                hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')">
-                                                {{ i "ellipsis" "w-3 h-3" }}
-                                            </button>
-                                        {{ end }}
-
-                                        {{ if index $.TagMap $commit.Hash.String }}
-                                            {{ range $tag := index $.TagMap $commit.Hash.String }}
-                                                <span class="ml-2 text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 inline-flex items-center">
-                                                {{ $tag }}
-                                                </span>
-                                            {{ end }}
-                                        {{ end }}
-                                    </div>
-
+                        <div class="flex items-center justify-between">
+                            <div class="flex-1">
+                                <div class="inline-flex items-end">
+                                    <a href="/{{ $.RepoInfo.FullName }}/commit/{{ $commit.Hash.String }}"
+                                       class="inline no-underline hover:underline dark:text-white">
+                                       {{ index $messageParts 0 }}
+                                    </a>
                                     {{ if gt (len $messageParts) 1 }}
-                                        <p class="hidden mt-1 text-sm cursor-text pb-2 dark:text-gray-300">
-                                            {{ nl2br (index $messageParts 1) }}
-                                        </p>
+                                        <button
+                                            class="py-1/2 px-1 bg-gray-200 hover:bg-gray-400 rounded dark:bg-gray-700 dark:hover:bg-gray-600 ml-2"
+                                            hx-on:click="this.parentElement.nextElementSibling.classList.toggle('hidden')">
+                                            {{ i "ellipsis" "w-3 h-3" }}
+                                        </button>
+                                    {{ end }}
+
+                                    {{ if index $.TagMap $commit.Hash.String }}
+                                        {{ range $tag := index $.TagMap $commit.Hash.String }}
+                                            <span class="ml-2 text-xs rounded bg-gray-100 dark:bg-gray-700 text-black dark:text-white font-mono px-2 inline-flex items-center">
+                                            {{ $tag }}
+                                            </span>
+                                        {{ end }}
                                     {{ end }}
                                 </div>
-                                <a href="/{{ $.RepoInfo.FullName }}/tree/{{ $commit.Hash.String }}"
-                                   class="p-1 mr-1 hover:bg-gray-100 dark:hover:bg-gray-700 rounded"
-                                   title="Browse repository at this commit">
-                                    {{ i "folder-code" "w-4 h-4" }}
-                                </a>
+
+                                {{ if gt (len $messageParts) 1 }}
+                                    <p class="hidden mt-1 text-sm cursor-text pb-2 dark:text-gray-300">
+                                        {{ nl2br (index $messageParts 1) }}
+                                    </p>
+                                {{ end }}
                             </div>
+                            <a href="/{{ $.RepoInfo.FullName }}/tree/{{ $commit.Hash.String }}"
+                               class="p-1 mr-1 hover:bg-gray-100 dark:hover:bg-gray-700 rounded"
+                               title="Browse repository at this commit">
+                                {{ i "folder-code" "w-4 h-4" }}
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -160,6 +164,15 @@
                     </span>
                     <div class="inline-block px-1 select-none after:content-['·']"></div>
                     <span>{{ shortTimeFmt $commit.Committer.When }}</span>
+
+                    <!-- ci status -->
+                    {{ $pipeline := index $.Pipelines .Hash.String }}
+                    {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
+                      <div class="inline-block px-1 select-none after:content-['·']"></div>
+                      <span class="text-sm">
+                        {{ template "repo/fragments/pipelineStatusSymbol" $pipeline }}
+                      </span>
+                    {{ end }}
                 </div>
             </div>
         {{ end }}
