appview: make tooltips persistent, link tooltips to workflow page
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/commit.html
+++ b/appview/pages/templates/repo/commit.html
@@ -71,7 +71,7 @@
 
       <div class="text-sm">
         {{ if $.Pipeline }}
-          {{ template "repo/pipelines/fragments/pipelineSymbolLong" $.Pipeline }}
+          {{ template "repo/pipelines/fragments/pipelineSymbolLong" (dict "Pipeline" $.Pipeline "RepoInfo" $.RepoInfo) }}
         {{ end }}
       </div>
   </div>
