--- a/appview/pages/templates/repo/pipelines/fragments/tooltip.html
+++ b/appview/pages/templates/repo/pipelines/fragments/tooltip.html
@@ -1,28 +1,33 @@
 {{ define "repo/pipelines/fragments/tooltip" }}
-  <div class="absolute z-[9999] hidden group-hover:block bg-white dark:bg-gray-900 text-black dark:text-white rounded-md shadow w-80 top-full mt-2">
+  {{ $repoinfo := .RepoInfo }}
+  {{ $pipeline := .Pipeline }}
+  {{ $id := $pipeline.Id }}
+  <div class="absolute z-[9999] bg-white dark:bg-gray-900 text-black dark:text-white rounded shadow-sm w-80 top-full mt-2 p-2">
     <div class="flex flex-col divide-y divide-gray-200 dark:divide-gray-700">
-      {{ range $name, $all := .Statuses }}
-      <div class="flex items-center justify-between p-2">
-        {{ $lastStatus := $all.Latest }}
-        {{ $kind := $lastStatus.Status.String }}
+      {{ range $name, $all := $pipeline.Statuses }}
+      <a href="/{{ $repoinfo.FullName }}/pipelines/{{ $id }}/workflow/{{ $name }}" class="hover:no-underline">
+        <div class="flex items-center justify-between p-2">
+          {{ $lastStatus := $all.Latest }}
+          {{ $kind := $lastStatus.Status.String }}
 
-        {{ $t := .TimeTaken }}
-        {{ $time := "" }}
-        {{ if $t }}
-          {{ $time = durationFmt $t }}
-        {{ else }}
-          {{ $time = printf "%s ago" (shortTimeFmt $.Created) }}
-        {{ end }}
+          {{ $t := .TimeTaken }}
+          {{ $time := "" }}
+          {{ if $t }}
+            {{ $time = durationFmt $t }}
+          {{ else }}
+            {{ $time = printf "%s ago" (shortTimeFmt $.Created) }}
+          {{ end }}
 
-        <div id="left" class="flex items-center gap-2 flex-shrink-0">
-          {{ template "repo/pipelines/fragments/workflowSymbol" $all }}
-          {{ $name }}
+          <div id="left" class="flex items-center gap-2 flex-shrink-0">
+            {{ template "repo/pipelines/fragments/workflowSymbol" $all }}
+            {{ $name }}
+          </div>
+          <div id="right" class="flex items-center gap-2 flex-shrink-0">
+            <span class="font-bold">{{ $kind }}</span>
+            <time>{{ $time }}</time>
+          </div>
         </div>
-        <div id="right" class="flex items-center gap-2 flex-shrink-0">
-          <span class="font-bold">{{ $kind }}</span>
-          <time>{{ $time }}</time>
-        </div>
-      </div>
+      </a>
       {{ else }}
       <div class="flex items-center gap-2 p-2 italic text-gray-600 dark:text-gray-400 ">
         {{ i "hourglass" "size-4" }}
@@ -32,4 +37,3 @@
     </div>
   </div>
 {{ end }}
-
