--- a/appview/pages/templates/repo/index.html
+++ b/appview/pages/templates/repo/index.html
@@ -275,7 +275,7 @@
         {{ $pipeline := index $.Pipelines .Hash.String }}
         {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
           <div class="inline-block px-1 select-none after:content-['·']"></div>
-          {{ template "repo/pipelines/fragments/pipelineSymbolLong" $pipeline }}
+          {{ template "repo/pipelines/fragments/pipelineSymbolLong" (dict "RepoInfo" $.RepoInfo "Pipeline" $pipeline) }}
         {{ end }}
       </div>
     </div>
