--- a/appview/pages/templates/repo/log.html
+++ b/appview/pages/templates/repo/log.html
@@ -84,7 +84,7 @@
                         <!-- ci status -->
                         {{ $pipeline := index $.Pipelines .Hash.String }}
                         {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
-                          {{ template "repo/pipelines/fragments/pipelineSymbolLong" $pipeline }}
+                          {{ template "repo/pipelines/fragments/pipelineSymbolLong" (dict "Pipeline" $pipeline "RepoInfo" $.RepoInfo) }}
                         {{ end }}
                     </td>
                     <td class=" py-3 align-top text-gray-500 dark:text-gray-400">{{ timeFmt $commit.Committer.When }}</td>
@@ -170,7 +170,7 @@
                     {{ if and $pipeline (gt (len $pipeline.Statuses) 0) }}
                       <div class="inline-block px-1 select-none after:content-['·']"></div>
                       <span class="text-sm">
-                        {{ template "repo/pipelines/fragments/pipelineSymbolLong" $pipeline }}
+                        {{ template "repo/pipelines/fragments/pipelineSymbolLong" (dict "Pipeline" $pipeline "RepoInfo" $.RepoInfo) }}
                       </span>
                     {{ end }}
                 </div>
