--- a/appview/pages/templates/repo/pipelines/pipelines.html
+++ b/appview/pages/templates/repo/pipelines/pipelines.html
@@ -73,7 +73,7 @@
         </div>
 
         <div class="text-sm md:text-base col-span-1">
-          {{ template "repo/pipelines/fragments/pipelineSymbolLong" . }}
+          {{ template "repo/pipelines/fragments/pipelineSymbolLong" (dict "Pipeline" . "RepoInfo" $root.RepoInfo) }}
         </div>
 
         <div class="text-sm md:text-base col-span-1 text-right">
