appview: fix missing times in CI tooltip
Signed-off-by: oppiliappan <me@oppi.li>

--- a/appview/pages/templates/repo/pipelines/fragments/tooltip.html
+++ b/appview/pages/templates/repo/pipelines/fragments/tooltip.html
@@ -10,12 +10,12 @@
           {{ $lastStatus := $all.Latest }}
           {{ $kind := $lastStatus.Status.String }}
 
-          {{ $t := .TimeTaken }}
+          {{ $t := $pipeline.TimeTaken }}
           {{ $time := "" }}
           {{ if $t }}
             {{ $time = durationFmt $t }}
           {{ else }}
-            {{ $time = printf "%s ago" (shortTimeFmt $.Created) }}
+            {{ $time = printf "%s ago" (shortTimeFmt $pipeline.Created) }}
           {{ end }}
 
           <div id="left" class="flex items-center gap-2 flex-shrink-0">
