--- a/appview/pages/templates/repo/pipelines/fragments/workflowSymbol.html
+++ b/appview/pages/templates/repo/pipelines/fragments/workflowSymbol.html
@@ -17,6 +17,9 @@
   {{ else if eq $kind "cancelled" }}
     {{ $icon = "circle-slash" }}
     {{ $color = "text-gray-600 dark:text-gray-500" }}
+  {{ else if eq $kind "timeout" }}
+    {{ $icon = "clock-alert" }}
+    {{ $color = "text-orange-400 dark:text-orange-300" }}
   {{ else }}
     {{ $icon = "x" }}
     {{ $color = "text-red-600 dark:text-red-500" }}
