appview: add reaction for issues/PRs (close #65)
Add `sh.tangled.feed.reaction` lexicon and UI to *react* to issues/PRs
close #65
close #113

Signed-off-by: Seongmin Lee <boltlessengineer@proton.me>

--- a/appview/pages/templates/repo/pulls/fragments/pullHeader.html
+++ b/appview/pages/templates/repo/pulls/fragments/pullHeader.html
@@ -61,6 +61,20 @@
             {{ .Pull.Body | markdown }}
         </article>
     {{ end }}
+
+    <div class="flex items-center gap-2 mt-2">
+        {{ template "repo/fragments/reactionsPopUp" .OrderedReactionKinds }}
+        {{ range $kind := .OrderedReactionKinds }}
+            {{
+                template "repo/fragments/reaction"
+                (dict
+                    "Kind"      $kind
+                    "Count"     (index $.Reactions $kind)
+                    "IsReacted" (index $.UserReacted $kind)
+                    "ThreadAt"  $.Pull.PullAt)
+            }}
+        {{ end }}
+    </div>
 </section>
 
 
