--- a/appview/pages/templates/repo/issues/issue.html
+++ b/appview/pages/templates/repo/issues/issue.html
@@ -46,6 +46,20 @@
                 {{ .Issue.Body | markdown }}
             </article>
         {{ end }}
+
+        <div class="flex items-center gap-2 mt-2">
+            {{ template "repo/fragments/reactionsPopUp" .OrderedReactionKinds }}
+            {{ range $kind := .OrderedReactionKinds }}
+                {{
+                    template "repo/fragments/reaction"
+                    (dict
+                        "Kind"      $kind
+                        "Count"     (index $.Reactions $kind)
+                        "IsReacted" (index $.UserReacted $kind)
+                        "ThreadAt"  $.Issue.IssueAt)
+                }}
+            {{ end }}
+        </div>
     </section>
 {{ end }}
 
